--- a/service/service_edu/src/main/resources/application-dev.yml
+++ b/service/service_edu/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
 datasource:
   type: com.zaxxer.hikari.HikariDataSource
 driver-class-name: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
+url: jdbc:mysql://localhost:3306/college?serverTimezone=GMT%2B8
 username: root
 password: root
 hikari:
