--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>com.zjl</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>service_base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
