实现全局异常，日志配置管理，修改功能

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jackson.time-zone=GMT+8
 
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#logging.level.root=DEBUG
