前端改名以及上传头像到阿里云

--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active=dev
 
 #??? OSS
 #???????????
-aliyun.oss.file.endpoint=https://oss-cn-beijing.aliyuncs.com
+aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
 aliyun.oss.file.keyid=LTAI5tEWKGsDmfn8xqo3DScN
 aliyun.oss.file.keysecret=YfuVI6uPm7hpdL0Qq3Jplkzxon4dKs
 #bucket??????????????java????
