--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -15,3 +15,5 @@ aliyun.vod.file.keysecret=YfuVI6uPm7hpdL0Qq3Jplkzxon4dKs
 spring.servlet.multipart.max-file-size=1024MB
 # ??????????? ???10M
 spring.servlet.multipart.max-request-size=1024MB
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
