--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -12,3 +12,5 @@ aliyun.oss.file.keyid=LTAI5tEWKGsDmfn8xqo3DScN
 aliyun.oss.file.keysecret=YfuVI6uPm7hpdL0Qq3Jplkzxon4dKs
 #bucket??????????????java????
 aliyun.oss.file.bucketname=collegeproject
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
