--- a/service/service_edu/src/main/resources/application.yml
+++ b/service/service_edu/src/main/resources/application.yml
@@ -30,3 +30,15 @@ mybatis-plus:
   mapper-locations: classpath:com/zjl/eduservice/mapper/xml/*.xml
 
 
+#开启熔断机制
+feign:
+  hystrix:
+    enabled: true
+# 设置hystrix超时时间，默认1000ms
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 6000
