--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>service</module>
         <module>common</module>
         <module>service/service_vod</module>
+        <module>service/service_cms</module>
+        <module>service/service_acl</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>college_parent</name>
