--- a/vue-front-1010/package.json
+++ b/vue-front-1010/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "nuxt": "^2.17.0",
     "vue-awesome-swiper": "^3.1.3"
   },
