--- a/service/service_cms/src/main/resources/application.properties
+++ b/service/service_cms/src/main/resources/application.properties
@@ -14,3 +14,15 @@ spring.jackson.time-zone=GMT+8
 mybatis-plus.mapper-locations=classpath:com/zjl/educms/mapper/xml/*.xml
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+spring.redis.host=192.168.231.128
+spring.redis.password=123321
+spring.redis.port=6379
+spring.redis.database= 0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+#????????(???????)
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
