阿里云发送短信后端代码

--- a/service/service_msm/pom.xml
+++ b/service/service_msm/pom.xml
@@ -5,17 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.zjl</groupId>
-        <artifactId>common</artifactId>
+        <artifactId>service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common_utils</artifactId>
+    <artifactId>service_msm</artifactId>
 
     <dependencies>
-        <!-- JWT-->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
         </dependency>
     </dependencies>
     <properties>
@@ -24,6 +27,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
 </project>
-
