--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>service/service_vod</module>
         <module>service/service_cms</module>
         <module>service/service_acl</module>
+        <module>service/service_msm</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>college_parent</name>
