--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # ????
-server.port=8005
+server.port=8006
 # ???
-spring.application.name=service-msm
+spring.application.name=service-ucenter
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/college?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.redis.host=192.168.231.128
@@ -22,6 +22,6 @@ spring.redis.lettuce.pool.min-idle=0
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #??mapper xml?????
-mybatis-plus.mapper-locations=classpath:com/zjl/mapper/xml/*.xml
+mybatis-plus.mapper-locations=classpath:com/zjl/educenter/mapper/xml/*.xml
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
