--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8006
 spring.application.name=service-ucenter
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/college?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.redis.host=192.168.231.128
