--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.jackson.time-zone=GMT+8
 mybatis-plus.mapper-locations=classpath:com/zjl/educenter/mapper/xml/*.xml
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# ?????? appid
+wx.open.app_id=wxed9954c01bb89b47
+# ?????? appsecret
+wx.open.app_secret=a7482517235173ddb4083788de60b90e
+# ?????? ???url
+wx.open.redirect_url=http://guli.shop/api/ucenter/wx/callback
+
