--- a/vue-front-1010/package.json
+++ b/vue-front-1010/package.json
@@ -13,9 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^0.19.2",
+    "element-ui": "^2.15.13",
+    "js-cookie": "^3.0.5",
     "nuxt": "^2.17.0",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-qriously": "^1.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
