微信支付完成

--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -33,3 +33,5 @@ wx.open.app_secret=a7482517235173ddb4083788de60b90e
 # ?????? ???url
 wx.open.redirect_url=http://guli.shop/api/ucenter/wx/callback
 
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
