--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>service/service_acl</module>
         <module>service/service_msm</module>
         <module>service/service_ucenter</module>
+        <module>service/service_order</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>college_parent</name>
