--- a/service/service_acl/src/main/resources/application.properties
+++ b/service/service_acl/src/main/resources/application.properties
@@ -13,16 +13,17 @@ spring.datasource.password=root
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#spring.redis.host=192.168.44.132
-#spring.redis.port=6379
-#spring.redis.database= 0
-#spring.redis.timeout=1800000
-#
-#spring.redis.lettuce.pool.max-active=20
-#spring.redis.lettuce.pool.max-wait=-1
-##最大阻塞等待时间(负数表示没限制)
-#spring.redis.lettuce.pool.max-idle=5
-#spring.redis.lettuce.pool.min-idle=0
+spring.redis.host=192.168.231.128
+spring.redis.password=123321
+spring.redis.port=6379
+spring.redis.database= 0
+spring.redis.timeout=1800000
+
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+#最大阻塞等待时间(负数表示没限制)
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
 #最小空闲
 
 #配置mapper xml文件的路径
