--- a/service/service_statistics/src/main/resources/bootstrap.properties
+++ b/service/service_statistics/src/main/resources/bootstrap.properties
@@ -6,8 +6,8 @@ spring.profiles.active=dev
 # 该配置影响统一配置中心中的dataId
 spring.application.name=service-statistics
 
-spring.cloud.nacos.config.namespace=fffcbc78-504b-4cae-b9a2-3f50e0c2c4ef
-
-spring.cloud.nacos.config.ext-config[0].data-id=eduport.properties
+spring.cloud.nacos.config.namespace=154bed2b-777f-439c-9218-91812526da7d
+#
+spring.cloud.nacos.config.ext-config[0].data-id=port.properties
 # 开启动态刷新配置，否则配置文件修改，工程无法感知
 spring.cloud.nacos.config.ext-config[0].refresh=true
